css fix: remove scrollbars

--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@
   }
 
   .container {
-    /* flex: 1; */
     display: flex;
     flex-direction: column;
     font-family: "Inter", sans-serif;
@@ -159,23 +158,17 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 2400px) {
+
   /* Firefox */
+  *,
   .scrollable:not(.contacts-sidebar) {
     scrollbar-width: none; 
   }
 
 /* Chrome, Safari */
+  ::-webkit-scrollbar,
   .scrollable:not(.contacts-sidebar)::-webkit-scrollbar {
     display: none; 
   }
-
-  /* .scrollable {
-    overflow-y: scroll;
-    scrollbar-width: none;
-  }
-  
-  .scrollable::-webkit-scrollbar {
-    display: none;
-  } */
 }
